# llmedit

./: .gitignore  README.md  pyproject.toml
data/prompts/: systemPrompt.txt  userPromptParametrizedFormatTextChat.txt  userPromptParametrizedFormatTextEmail.txt  userPromptParametrizedFormatTextInstructionGuide.txt  userPromptParametrizedFormatTextPlainDocument.txt  userPromptParametrizedFormatTextSocialMediaPost.txt  userPromptParametrizedFormatTextWikiMarkdown.txt  userPromptParametrizedProofreadBase.txt  userPromptParametrizedProofreadCasual.txt  userPromptParametrizedProofreadFormal.txt  userPromptParametrizedProofreadFriendly.txt  userPromptParametrizedProofreadPullRequestDescription.txt  userPromptParametrizedProofreadPullRequestPoliteComment.txt  userPromptParametrizedProofreadRewrite.txt  userPromptParametrizedProofreadSemiFormal.txt  userPromptParametrizedTranslateBase.txt  userPromptParametrizedTranslateDictionary.txt
data/themes/: theme.qss
docs/: ui-mockups.txt
scripts/: download_models.py  reinstall_llamacpp.bash  reinstall_llamacpp_cuda_nvidia_linux.bash  reinstall_llamacpp_cuda_nvidia_windows.ps1  reinstall_llamacpp_opencl_amd_linux.bash  reinstall_llamacpp_opencl_amd_windows.ps1  reinstall_llamacpp_vulkan_linux.bash  reinstall_llamacpp_vulkan_windows.ps1
src/: app_context.py  main.py
src/business_logic/: interface.py  service.py
src/llm_inference/: client.py  ollama_client.py
src/llmedit/: context.py  main.py
src/llmedit/config/: application_prompts.py  (+5 more)
src/prompts/: provider.py
src/sanitizer/: service.py
src/ui/: main_window.py
(+71 files in other folders)
